_kube_/00-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
  - hosts:
    - 100-sp.fsportal.one
    secretName: cert-fsportal-one
  rules:
  - host: 100-sp.fsportal.one
    http:
      paths:
      - backend:
          serviceName: front-aurus
          servicePort: 10000
        path: /(.*)
